# sklib

./: .gitignore  CMakeLists.txt  README.md
cmake/: module.cmake
include/sklib/: container.hpp  macros.hpp  os.hpp  string.hpp  type_traits.hpp  vfs.hpp
include/sklib/container/: tree.hpp
include/sklib/os/: filedialog.hpp  filesystem.hpp  uuid.hpp
include/sklib/string/: convert.hpp
include/sklib/vfs/: node.hpp
install/: CMakeLists.txt  Config.cmake.in
res/vfs/: vfsconfig  vfsconfig.json
src/: CMakeLists.txt
src/os/: CMakeLists.txt  darwin.mm  macos.cpp  module_test.cpp  win.cpp
src/string/: CMakeLists.txt  convert.cpp
src/vfs/: CMakeLists.txt  module.cpp  module_test.cpp  node.cpp
